[tool.poetry]
name = "email-to-whatsapp-mom-bills"
version = "0.1.0"
description = ""
authors = ["Vinicius999 <viniciussilva.dsc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
imap-tools = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
